k3s/observability/prometheus/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: prometheus
  namespace: monospaced
spec:
  selector:
    app: prometheus
  ports:
    - protocol: TCP
      targetPort: 9090
      port: 9090
