k3s/observability/prometheus/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: prometheus
  namespace: monospaced
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
spec:
  rules:
  - host: prometheus.rohitpotato.xyz
    http:
      paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: prometheus
              port:
                number: 9090
  tls:
  - hosts:
    - prometheus.rohitpotato.xyz
    secretName: prometheus-tls
